=== 0.4 ===

2004-12-25 Tiago Cogumbreiro <cogumbreiro@users.sf.net>
	
	* gtk_util.py: (DictStore):
	Added insert_before and insert_after. Corrected a bug on __delitem__, now
	items are deletable.
	
	* mastering.py: (GtkMusicList): Added a field for private handling in 
	DND_TARGETS. Now GtkMusicList fully supports DND with row insertion (as
	opposed to append-only) and row reordering.
	
	* mastering.py: recording.py: __init__.py: serpentine.glade:
	Added main window on dialogs as parent and ensure they are centered on
	parent for HIG compliance.

	* gtk_util.py: new function get_root_parent, returns the parent window on
	contained widgets.
	
2004-12-24 Tiago Cogumbreiro <cogumbreiro@users.sf.net>

	*__init__.py: (Serpentine.burn): Now the space left on the cache location
	is checked before starting the burning procedure.
	
=== 0.3 ===

2004-12-24 Tiago Cogumbreiro <cogumbreiro@users.sf.net>

	* serpentine:
	A new relocable script for running Serpentine.
	
	* __init__.py: serpentine_shell.py was renamed to __init__.py.
	There is no mastering object sent through argument, one is constructed
	inside. data_dir is sent through argument and fed to RecordingPreferences.
	About dialog was implemented. Changed the default size to 450x350.
	
	* preferences.py:
	the releases file will have the version.
	
2004-12-23 Tiago Cogumbreiro <cogumbreiro@users.sf.net>

	* preferences.py:
	Directory browsing button now works.
	
	* serpentine_shell.py:
	(MainWindow.burn): Now check if the temporary directory is available.
	
	* gaw.py:
	(Data.__set_data): forgot pass the gconf key as an argument.
	
2004-12-22 Tiago Cogumbreiro <cogumbreiro@users.sf.net>

	* mastering.py:
	ErrorTrapper, class used to show an error message showing which files were
	not added.
	(AddFile.on_finished): now this operation returns the same success value as
	the metadata fetching operation.
	(AudioMastering.add_file), (AudioMastering.add_files):
	Uses ErrorTrapper.

	* audio.py:
	(AudioMetadata):