@@ -130,21 +130,29 @@ gobject.type_register (SimpleList)
 
 dialog_error = \
 	lambda primary_text, secondary_text, parent = None:\
-		hig_alert (primary_text, secondary_text, parent, stock = gtk.STOCK_DIALOG_ERROR)
+		hig_alert (primary_text,
+		           secondary_text,
+		           parent,
+		           stock = gtk.STOCK_DIALOG_ERROR,
+		           buttons = (gtk.STOCK_CLOSE, gtk.RESPONSE_OK))
 	
 
 dialog_warn = \
 	lambda primary_text, secondary_text, parent = None:\
-		hig_alert (primary_text, secondary_text, parent,
+		hig_alert (primary_text,
+		           secondary_text,
+		           parent,
 		           stock = gtk.STOCK_DIALOG_WARNING,
 		           buttons = (gtk.STOCK_CLOSE, gtk.RESPONSE_OK))
 
 dialog_ok_cancel = \
-	lambda primary_text, secondary_text, parent = None: \
-		hig_alert (primary_text, secondary_text, parent,
+	lambda primary_text, secondary_text, parent = None, ok_button = gtk.STOCK_OK: \
+		hig_alert (primary_text,
+		           secondary_text,
+		           parent,
 		           stock = gtk.STOCK_DIALOG_WARNING,
 		           buttons = (gtk.STOCK_CANCEL, gtk.RESPONSE_CANCEL,
-		                      gtk.STOCK_OK, gtk.RESPONSE_OK))
+		                      ok_button, gtk.RESPONSE_OK))
 
 def hig_label (text = None):
 	lbl = gtk.Label ()
